# NewsInsight

./: .gitignore  ENDPOINTS.md  Home.md  README.md  build.gradle.kts  collect-code-to-md.js  docker-compose.consul.yml  gradle.properties  mcp.json  mkdocs.yml  package-lock.json  package.json  project-code-collection-1.md  project-code-collection-2.md  project-code-collection-3.md  project-code-collection-4.md  project-code-collection-5.md  settings.gradle.kts
.github/workflows/: deploy-aws.yml  deploy-consul-secrets.yml  deploy-gcp.yml  deploy-pmx102.yml  publish-mkdocs-wiki.yml  validate-config.yml
backend/AI_agent_server/: README.md  ai-serve.Dockerfile  ai-serve.nodove.com  auto-chat-proxy.js  docker-compose.yml
backend/admin-dashboard/: Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/api-gateway-service/: Dockerfile  build.gradle.kts
backend/autonomous-crawler-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/autonomous-crawler-service/crawl-worker/: Dockerfile  main.py  requirements.txt  state_store.py
backend/autonomous-crawler-service/src/: __init__.py  main.py
backend/autonomous-crawler-service/src/api/: __init__.py  server.py  sse.py
backend/autonomous-crawler-service/src/auth/: __init__.py  jwt_utils.py  middleware.py
backend/autonomous-crawler-service/src/captcha/: __init__.py  camoufox_driver.py  nopecha.py  paid_solvers.py  stealth.py  undetected.py
backend/autonomous-crawler-service/src/config/: __init__.py  consul.py  settings.py
backend/autonomous-crawler-service/src/crawler/: __init__.py  agent.py  policies.py  url_filter.py
backend/autonomous-crawler-service/src/kafka/: __init__.py  consumer.py  messages.py  producer.py
backend/autonomous-crawler-service/src/mcp/: __init__.py  adapter.py  client.py  router.py
backend/autonomous-crawler-service/src/metrics/: __init__.py
backend/autonomous-crawler-service/src/ml/: __init__.py  orchestrator.py  router.py
backend/autonomous-crawler-service/src/search/: __init__.py  base.py  brave.py  orchestrator.py  perplexity.py  query_analyzer.py  rrf.py  tavily.py
backend/autonomous-crawler-service/src/state/: __init__.py  store.py
backend/browser-use/: Dockerfile.api  intent_analyzer.py  server.py
backend/data-collection-service/: .project  Dockerfile  build.gradle.kts
backend/ml-addons/: docker-compose.yml
backend/news-scraper/: Dockerfile  main.py  requirements.txt
backend/services/browser-use-api/: Dockerfile.api  README.md  aidove_chat.py  api_key_provisioner.py  intent_analyzer.py  pyproject.toml  server.py
backend/shared/: prometheus_metrics.py  proxy_client.py
backend/shared-libs/: build.gradle.kts
code/BACKEND-ANALYSIS-SERVICE/: Dockerfile  requirements.txt
code/BACKEND-API-GATEWAY/: .env.example  requirements.txt
code/BACKEND-COLLECTOR-SERVICE/: .env.example  Dockerfile  requirements.txt
code/BACKEND-WEB-CRAWLER/: package-lock.json  requirements.txt
code/shared/: consul_config.py
collector-service/: build.gradle.kts
common/: build.gradle.kts
configs/: development.env  staging.env
docs/: CONCURRENT_SEARCH_IMPROVEMENT.md  CONTINUE_WORK_IMPROVEMENT.md  DATABASE_STORAGE_ANALYSIS.md  ENDPOINT_CONNECTIVITY_REPORT.md  NewsInsight_vs_BigKinds_Analysis_Report.md  PMX102_DEPLOYMENT_GUIDE.md  PROJECT_FEATURE_PLAN.md  UI_UX_REDESIGN_ANALYSIS.md  gcp.md  index.md
docs/backend/: fact-check-llm-integration.md  hardcoded-logic-audit.md  llm-intent-analysis-setup.md
docs/backlog/: controller-consolidation.md  error1211.md
docs/overview/: README.md  index.html  opencode-llm.html  회의안건-1114-서비스관점.md  회의안건-1114.md
docs/아이디어/: 활용_방안_아이디어.md
etc/configs/: autonomous-crawler.env.template  development.env  production.env  services.json  services.schema.json  staging.env
etc/docker/: cloudflared-config.yml  docker-compose.consul.yml  docker-compose.production.yml  docker-compose.zerotrust-news.yml  docker-compose.zerotrust-newsinsight.yml  docker-compose.zerotrust-preview.yml  docker-compose.zerotrust.yml  session-ses_5513.md
etc/infra-guides/: CLOUDFLARE_TUNNEL_CHECKLIST.md  CONSUL_MIGRATION.md  GATEWAY_ARCHITECTURE.md  SPRING_BOOT_MIGRATION_PLAN.md
etc/k8s/: README.md  namespace.yaml
etc/scripts/: README.md  consul_seed.sh  diagnose-autocrawl.sh  test-cloudflare-endpoints.sh  verify_endpoints.sh
frontend/: .env.example  Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  (+1 more)
scripts/: README.md  build-and-push.sh  build-ecr.sh  clean-artifacts.sh  clean-docker.sh  consul_seed.sh  deploy-aws.sh  deploy-remote-sshconfig.sh  deploy-remote.sh  one-click-consul.sh  setup-cloudflare-dns.sh  start.sh  status.sh  test-connections.sh
spring-boot-examples/: build.gradle.kts  gradle.properties  settings.gradle.kts
(+651 files in other folders)
