[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-crawler-service"
version = "0.1.0"
description = "AI-driven autonomous browser crawler using browser-use for NewsInsight"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "NewsInsight Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core browser automation
    "browser-use>=0.1.40",
    "playwright>=1.49.0",
    
    # LLM providers
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    
    # Kafka messaging
    "aiokafka>=0.12.0",
    
    # REST API (browser-agent integration)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Data validation & config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # HTTP clients
    "aiohttp>=3.11.0",
    "httpx>=0.28.0",
    
    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    
    # Utilities
    "tenacity>=9.0.0",
    
    # Authentication
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
autonomous-crawler = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
