[project]
name = "browser-use-api"
description = "Browser-Use API Server with AIDove integration for NewsInsight"
authors = [{ name = "NewsInsight Team" }]
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # Browser-Use from PyPI
    "browser-use>=0.1.40",
    # API server
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    # HTTP client
    "httpx>=0.28.0",
    # Data validation
    "pydantic>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 130
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
